style: add buttons extra classes

--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,29 @@
 @import url("../font/style.css");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* override */
+a {
+    @apply text-blue-800 hover:text-black
+}
+
+nav a {
+    @apply text-black
+}
+/* override */
+
+/* buttons */
+.button {
+    @apply py-2 px-6 inline-block rounded text-black
+}
+
+.button-default {
+    @apply bg-yellow-300 hover:shadow-gray-200 hover:bg-yellow-400 transition ease-in-out
+}
+
+.button-secondary {
+    @apply bg-slate-200 hover:shadow-gray-200 hover:bg-yellow-300
+}
+/* buttons */
