--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,8 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import "./buttons.css";
+
 /* override */
 a {
     @apply text-blue-800 hover:text-black
@@ -13,17 +15,3 @@ nav a {
     @apply text-black
 }
 /* override */
-
-/* buttons */
-.button {
-    @apply py-2 px-6 inline-block rounded text-black
-}
-
-.button-default {
-    @apply bg-yellow-300 hover:shadow-gray-200 hover:bg-yellow-400 transition ease-in-out
-}
-
-.button-secondary {
-    @apply bg-slate-200 hover:shadow-gray-200 hover:bg-yellow-300
-}
-/* buttons */
