style: make new blocks, styles from https://www.figma.com/file/2DZCHdQaWmRmV6SaB9oaWK/%D0%9E%D0%BA%D1%83%D1%80%D1%81%D0%B0%D1%85?type=design&node-id=30-506&mode=design

--- a/src/input.css
+++ b/src/input.css
@@ -6,7 +6,6 @@
 @import 'tailwindcss/utilities';
 
 @import "./default.css";
-
 @import "./buttons.css";
 
 /* override */
@@ -16,6 +15,10 @@ a {
 
 nav a {
     @apply text-black
+}
+
+nav.breadcrumb a {
+    @apply text-blue-800
 }
 
 [x-cloak] {
