--- a/src/buttons.css
+++ b/src/buttons.css
@@ -3,11 +3,29 @@
     @apply py-2 px-6 rounded text-black
 }
 
-.button-default {
+.button.button-default {
     @apply bg-yellow-300 hover:shadow-gray-200 hover:bg-yellow-400 transition ease-in-out
 }
 
-.button-secondary {
+.button.button-secondary {
     @apply bg-slate-200 hover:shadow-gray-200 hover:bg-yellow-300
+}
+.button.button-o {
+    @apply bg-transparent border border-2 border-yellow-300 text-yellow-300 font-bold text-center transition ease-in-out hover:bg-yellow-300 hover:text-white
+}
+
+.tag {
+    @apply border border-gray-100 shadow-md py-3.5 px-5 rounded-2xl
+}
+.tag.tag-default {
+    @apply hover:bg-gray-50 active:bg-red-50
+}
+
+.tag.tag-slim {
+    @apply py-2 px-4
+}
+
+.tag.tag-link {
+    @apply hover:bg-gray-50 active:bg-red-50 text-blue-800
 }
 /* buttons */
